# datahunter

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
datahunter/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  prometheus.yml  pyproject.toml  scrapy.cfg
datahunter/.github/workflows/: ci.yml
datahunter/alembic/: env.py
datahunter/alembic/versions/: 0001_create_scraped_books.py
datahunter/api/app/: jobs.py  main.py  schemas.py
datahunter/api/tests/: test_jobs.py
datahunter/grafana/dashboards/: datahunter.json
datahunter/grafana/datasources/: prometheus.yml
datahunter/grafana/provisioning/dashboards/: dashboards.yml
datahunter/scraper/app/benchmarks/: parallel_browsers.py  sync_vs_async.py
datahunter/scraper/app/browsers/: async_playwright_client.py  async_quotes_pw_spider.py  playwright_client.py  quotes_intercept_spider.py  quotes_pw_spider.py
datahunter/scraper/app/core/: async_http_client.py  contexts.py  decorators.py  entities.py  exceptions.py  http_client.py  logging.py  metrics.py  pipeline.py  robots.py  settings.py  utils.py
datahunter/scraper/app/parsers/: html_parser.py
datahunter/scraper/app/spiders/: async_books_spider.py  books_spider.py  quotes_spider.py
datahunter/scraper/app/storage/: async_service.py  models.py  service.py
datahunter/scraper/scrapy_project/: items.py  pipelines.py  settings.py
datahunter/scraper/scrapy_project/middlewares/: retry.py  user_agent.py
datahunter/scraper/scrapy_project/spiders/: books_spider.py  quotes_spider.py
datahunter/scraper/tests/: test_async_books_spider.py  test_async_http_client.py  test_async_playwright_client.py  test_async_quotes_pw_spider.py  test_async_storage.py  test_books_scrapy_spider.py  test_books_spider.py  test_contexts.py  test_decorators.py  test_entities.py  test_html_parser.py  test_http_client.py  test_logging.py  test_metrics.py  test_pipeline.py  test_playwright_client.py  test_quotes_intercept_spider.py  test_quotes_scrapy_spider.py  test_quotes_spider.py  test_retry_middleware.py  test_robots.py  test_scrapy_pipeline.py  test_settings.py  test_storage.py  test_user_agent_middleware.py  test_utils.py
datahunter/scraper/tests/fixtures/: books_catalog.html  books_page1.html  books_page2.html  quotes_intercept.html  quotes_page1.json  quotes_page2.json  quotes_pw_malformed.html  quotes_pw_page1.html  quotes_pw_page2.html
datahunter/worker/app/: config.py  main.py  signals.py
datahunter/worker/tests/: test_scraping_jobs.py  test_signals.py
(+2 files in other folders)
