[project]
name = "datahunter"
version = "0.1.0"
description = "Sistema profissional de web scraping"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "playwright>=1.58.0",
    "aiosqlite>=0.22.1",
    "scrapy>=2.15.0",
    "scrapy-playwright>=0.0.46",
    "celery>=5.4",
    "redis>=5.0",
    "flower>=2.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
scraping = [
    "playwright>=1.44",
    "scrapy>=2.11",
]
worker = [
    "celery>=5.4",
    "redis>=5.0",
    "flower>=2.0",
]
observability = [
    "prometheus-client>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-beautifulsoup4>=4.12.0.20250516",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP047"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["scraper/tests", "worker/tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["scraper", "worker"]
omit = ["*/tests/*", "*/benchmarks/*", "*/scrapy_project/settings.py"]
concurrency = ["thread", "greenlet"]
